# ewoksorange

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  test.py
.github/workflows/: release.yml  test.yml
demo/: pyproject.toml
doc/: API.rst  addon.rst  canvas.rst  conf.py  deal_with_execution.rst  different_inputs_outputs.rst  examples.rst  howtoguides.rst  index.rst  note_on_designs.rst  parameter_form.rst  tutorials.rst  update_modules.sh  writing_orange_widgets.rst
doc/development/: ewoks_widgets.rst  index.rst  parameter_form.rst
doc/how_to_guides/: build_the_doc.rst  canvas.rst  index.rst
doc/howtoguides/: canvas.rst  index.rst  installation.rst
doc/modules/: ewoksorange.gui.rst  ewoksorange.rst  ewoksorange.tests.examples.ewoks_example_1_addon.ewoks_example_1_addon.rst  ewoksorange.tests.examples.ewoks_example_1_addon.ewoks_example_addon.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.evaluate.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.evaluate.submodule.icons.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.evaluate.submodule.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.evaluate.submodule.tutorials.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.ewoks_example_category.icons.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.ewoks_example_category.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.ewoks_example_category.tutorials.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.ewoks_example_supercategory.ewoks_example_subcategory.icons.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.ewoks_example_supercategory.ewoks_example_subcategory.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.ewoks_example_supercategory.ewoks_example_subcategory.tutorials.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.ewoks_example_supercategory.rst  ewoksorange.tests.examples.ewoks_example_1_addon.orangecontrib.rst  ewoksorange.tests.examples.ewoks_example_1_addon.rst  ewoksorange.tests.examples.ewoks_example_2_addon.ewoks_example_1_addon.rst  ewoksorange.tests.examples.ewoks_example_2_addon.ewoks_example_2_addon.rst  ewoksorange.tests.examples.ewoks_example_2_addon.orangecontrib.evaluate.rst  ewoksorange.tests.examples.ewoks_example_2_addon.orangecontrib.evaluate.submodule.icons.rst  ewoksorange.tests.examples.ewoks_example_2_addon.orangecontrib.evaluate.submodule.rst  ewoksorange.tests.examples.ewoks_example_2_addon.orangecontrib.evaluate.submodule.tutorials.rst  (+14 more)
ewoksorange/: __init__.py  bindings.py  orange_version.py  owsconvert.py  registration.py
(+179 files in other folders)
