[build-system]
requires = ["setuptools>=46.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ewoksorange-demo"
version = "4.0.0"
authors = [{ name = "ESRF", email = "dau-pydev@esrf.fr" }]
description = "Demo and test widgets for ewoksorange"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ewoksorange>=4.0.0",
]

[tool.setuptools]
packages = []

[project.entry-points."orange3.addon"]
"ewoksdemo" = "orangecontrib.ewoksdemo"

[project.entry-points."orange.widgets"]
"Ewoks Demo" = "orangecontrib.ewoksdemo"

[project.entry-points."orangecanvas.examples"]
"Ewoks Demo" = "orangecontrib.ewoksdemo.tutorials"

[project.entry-points."orange.widgets.tutorials"]
"Ewoks Demo" = "orangecontrib.ewoksdemo.tutorials"

[project.entry-points."orange.canvas.help"]
"html-index" = "orangecontrib.ewoksdemo:WIDGET_HELP_PATH"

[project.entry-points."oasys.addon"]
"ewoksdemo" = "orangecontrib.ewoksdemo"

[project.entry-points."oasys.widgets"]
"Ewoks Demo" = "orangecontrib.ewoksdemo"
